# bulwark

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Package.swift  README.md  SECURITY.md
.github/workflows/: typescript.yml
docs/: ARCHITECTURE.md  SECURITY_REVIEW.md  THREAT_MODEL.md
eval/: README.md  dataset.jsonl  run_eval.py
python/: README.md  pyproject.toml  run_tests.py
python/examples/: basic.py  with_openai.py
python/src/bulwark/: __init__.py  __main__.py  detect.py  guard.py  patterns.py  prompt.py  sanitize.py  spotlight.py  types.py  validate.py
python/src/bulwark/backends/: __init__.py  anthropic.py  base.py  openai.py
python/tests/: test_custom_signatures.py  test_detect.py  test_evasion.py  test_guard.py  test_multilingual.py  test_sanitize.py  test_spotlight_prompt.py  test_validate.py
swift/: README.md
swift/Sources/Bulwark/: Bulwark.swift  Detect.swift  Patterns.swift  Rampart.swift  Sanitize.swift  ToolGuard.swift  Types.swift  Validate.swift
swift/Tests/BulwarkTests/: CustomSignatureTests.swift  EvasionTests.swift  MultilingualTests.swift  RampartTests.swift  ToolGuardTests.swift
typescript/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
typescript/examples/: basic.ts
typescript/src/: detect.ts  guard.ts  index.ts  patterns.ts  prompt.ts  sanitize.ts  spotlight.ts  types.ts  validate.ts
typescript/test/: custom-signatures.test.ts  detect.test.ts  evasion.test.ts  guard.test.ts  multilingual.test.ts  sanitize.test.ts  spotlight-prompt.test.ts  validate.test.ts
